--- a/css/estilo.css
+++ b/css/estilo.css
@@ -96,3 +96,19 @@ body{
     transition: all 0.5s;
 }
 
+.servicos-col-esq{
+}
+
+.servicos-col-dir{
+    text-align: center;
+}
+
+.img-serv{
+    border-radius: 5px;
+    width: 100%;
+}
+
+.img-fachada{
+    width: 100%;
+}
+
