--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,7 +5,7 @@
     }
     
     .slide{
-        height: 500px;
+        max-height: 90vh;
     }
 
     .produto_item{
@@ -21,7 +21,7 @@
 
     .zap{
         width: 90px; 
-        bottom: 20px; 
+        bottom: 40px; 
     }
 }
 
@@ -61,7 +61,7 @@
 
     .zap{
         width: 70px; 
-        bottom: 90px; 
+        bottom: 80px; 
     }
 
 }
@@ -117,6 +117,7 @@ body{
     border-radius: 10px;
     opacity: 0.7;
     padding: 10px 1px 10px 1px;
+    bottom: 20%;
 }
 
 .msg-car h2,h5{
@@ -225,4 +226,3 @@ body{
     cursor: pointer;
     color: white;
 }
-
