--- a/css/estilo.css
+++ b/css/estilo.css
@@ -79,7 +79,7 @@
     opacity: 0.9;
     border: 1px solid #9696ff;
     border-radius: 50%;
-    width: 80px;
+    transform: rotate(10deg);
 }
 
 
