--- a/modulo_adm/css/estoque.css
+++ b/modulo_adm/css/estoque.css
@@ -1,6 +1,7 @@
 
 @media only screen and (min-width:760px){
     .produto_item{
+        width: 180px;
         height: 180px;
     }
 }
@@ -8,6 +9,7 @@
 @media only screen and (max-width:761px) {
 
     .produto_item{
+        width: 150px;
         height: 150px;
     }
 
@@ -53,8 +55,7 @@
 }
 
 .produtos img{
-    max-width: 70%;
-    height: 70%;
+    max-height: 100px;
     border-radius: 15px;
     transition: all 0.5s;
 }
